# rust-ecosystem-simulation

./: .gitignore  Cargo.toml  README.md
src/: boid.rs  configs.rs  elements.rs  globals.rs  gui.rs  lib.rs  main.rs  stats.rs  utils.rs  world.rs
